tests/agl/rejections/parse/partial_placeholder_juxtaposition.agl
def f(x: int) -> int = x

f ?
